samples/_failures_safe/1761524302_bc7fa7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_edacafc2.c: In function ‘main’:
./samples/SAFE/__tmp_edacafc2.c:135:5: error: expected expression at end of input
  135 |     switch (
      |     ^~~~~~
./samples/SAFE/__tmp_edacafc2.c:135:5: error: expected declaration or statement at end of input
